Fix to ja footer link

--- a/content/_index.ja.html
+++ b/content/_index.ja.html
@@ -105,8 +105,8 @@
 </div>
 <div class="bottom-menu">
     <ul class="bottom-menu">
-        <li><a href="environment">更新履歴</a></li>
-        <li><a href="https://ja.monaca.io/headline/">対応環境</a></li>
+        <li><a href="https://ja.monaca.io/headline/">更新履歴</a></li>
+        <li><a href="environment/">対応環境</a></li>
         <li><a href="https://ja.monaca.io/pricing.html">料金プラン</a></li>
         <li><a href="https://ja.monaca.io/support/inquiry.html">お問い合わせ窓口</a></li>
         <li><a href="sitemap">サイトマップ</a></li>
