Update general font size to 15px

--- a/content/_index.ja.html
+++ b/content/_index.ja.html
@@ -91,7 +91,7 @@
         <div class="item">
             <a href="https://edu.monaca.io/"><img src="/images/common/top_page/img_school1.jpg"></a>
             <h3>学習・教育</h3>
-            <p>"モバイルアプリの開発手法を学びたい方や、 学校などの教育機関のための学習サポートプログラムを提供しています。"</p>
+            <p>モバイルアプリの開発手法を学びたい方や、 学校などの教育機関のための学習サポートプログラムを提供しています。</p>
         </div>
         <div class="item">
             <a href="https://edu.monaca.io/material"><img src="/images/common/top_page/img_books1.jpg"></a>
