Update 6_en: ja translation

--- a/content/_index.ja.html
+++ b/content/_index.ja.html
@@ -25,18 +25,18 @@
     <div class="container">
         <div class="item">
             <a href="products_guide"><img src="/images/common/top_page/img_samples1.jpg"></a>
-            <h3>Monacaを学ぶ</h3>
+            <h3>Monaca を学ぶ</h3>
             <p>プロジェクトの作成からアプリの申請/配布まで解説しています。</p>
         </div>
         <div class="item">
             <a href="tutorials"><img src="/images/common/top_page/img_build1.jpg"></a>
             <h3>チュートリアル</h3>
-            <p>Monacaでの開発を効率的にはじめるためのチュートリアルです。</p>
+            <p>Monaca での開発を効率的にはじめるためのチュートリアルです。</p>
         </div>
         <div class="item">
             <a href="features"><img src="/images/common/top_page/img_components1.jpg"></a>
-            <h3>Features</h3>
-            <p>Various features you can add into your Monaca apps</p>
+            <h3>機能</h3>
+            <p>Monaca で開発するアプリに追加できる機能を紹介しています。</p>
         </div>
         <div class="item">
             <a href="sampleapp/samples"><img src="/images/common/top_page/img_samples4.jpg"></a>
@@ -46,7 +46,7 @@
         <div class="item">
             <a href="reference"><img src="/images/common/top_page/img_api1.jpg"></a>
             <h3>API リファレンス</h3>
-            <p>カメラ操作、位置情報などネイティブ機能にアクセスするプラグインのAPIリファレンスです。</p>
+            <p>カメラ操作、位置情報などネイティブ機能にアクセスするプラグインの API リファレンスです。</p>
         </div>
         <div class="item">
             <a href="sampleapp/tips"><img src="/images/common/top_page/img_samples3.jpg"></a>
@@ -66,7 +66,7 @@
         <div class="item">
             <a href="https://edu.monaca.io/material"><img src="/images/common/top_page/img_books1.jpg"></a>
             <h3>書籍</h3>
-            <p>Monaca公式ガイドをはじめ、プログラミング教育にもご利用いただける書籍やサンプルアプリ、動画教材をご紹介しています。</p>
+            <p>Monaca 公式ガイドをはじめ、プログラミング教育にもご利用いただける書籍やサンプルアプリ、動画教材をご紹介しています。</p>
         </div>
     </div>
     <footer class="footline">
