Update header logo style

--- a/content/_index.en.html
+++ b/content/_index.en.html
@@ -299,7 +299,7 @@
     <a href="#" id="sidebar-toggle" data-sidebar-toggle="">
       <i class="fa fa-bars"></i>
     </a>
-    <img src="/images/common/header_logo_docs.png">
+    <img src="/images/common/header_logo_docs.png" class="header-logo">
     <nav id="top-bar">
         <ul>
             <li><a href="https://community.onsen.io/">
