improve lighthouse score (#829)

--- a/content/_index.en.html
+++ b/content/_index.en.html
@@ -296,10 +296,10 @@
 </style>
 
 <div id="top-bar">
-    <a href="#" id="sidebar-toggle" data-sidebar-toggle="">
+    <a href="#" id="sidebar-toggle" data-sidebar-toggle="" aria-label="sidebar toggle">
       <i class="fa fa-bars"></i>
     </a>
-    <img src="/images/common/header_logo_docs.png" class="header-logo">
+    <img src="/images/common/header_logo_docs.png" class="header-logo" alt="logo">
     <nav id="top-bar">
         <ul>
             <li><a href="https://community.onsen.io/">
@@ -321,37 +321,37 @@
 <div class="top-body">
     <div class="container">
         <div class="item">
-            <a href="products_guide"><img src="/images/common/top_page/img_samples1.jpg"></a>
+            <a href="products_guide"><img src="/images/common/top_page/img_samples1.jpg" alt="product guides"></a>
             <h3>Products Guide</h3>
             <p>Comprehensive guides of each Monaca products such as Monaca Cloud IDE, Localkit and CLI</p>
         </div>
         <div class="item">
-            <a href="tutorials"><img src="/images/common/top_page/tutorials.jpg"></a>
+            <a href="tutorials"><img src="/images/common/top_page/tutorials.jpg" alt="tutorials"></a>
             <h3>Tutorials</h3>
             <p>Step-by-step tutorials for all Monaca products covering varous aspect of app development from creating a project to deploying your app</p>
         </div>
         <div class="item">
-            <a href="features"><img src="/images/common/top_page/features.jpg"></a>
+            <a href="features"><img src="/images/common/top_page/features.jpg" alt="features"></a>
             <h3>Features</h3>
             <p>Various features you can add into your Monaca apps</p>
         </div>
         <div class="item">
-            <a href="sampleapp/samples"><img src="/images/common/top_page/samples.jpg"></a>
+            <a href="sampleapp/samples"><img src="/images/common/top_page/samples.jpg" alt="sample apps"></a>
             <h3>Sample Apps</h3>
             <p>Useful and popular sample apps using Monaca & Onsen UI</p>
         </div>
         <div class="item">
-            <a href="reference"><img src="/images/common/top_page/img_api1.jpg"></a>
+            <a href="reference"><img src="/images/common/top_page/img_api1.jpg" alt="reference"></a>
             <h3>API Reference</h3>
             <p>Everything about API references you may need to use while creating Monaca apps such as Monaca API, Core & third-party Cordova plugins and so on</p>
         </div>
         <div class="item">
-            <a href="sampleapp/tips"><img src="/images/common/top_page/tips_tricks.jpg"></a>
+            <a href="sampleapp/tips"><img src="/images/common/top_page/tips_tricks.jpg" alt="tips and tricks"></a>
             <h3>Tips & Tricks</h3>
             <p>Clever ways to develop with Monaca</p>
         </div>
         <div class="item">
-            <a href="reference/service_integration"><img src="/images/common/top_page/img_hands1.jpg"></a>
+            <a href="reference/service_integration"><img src="/images/common/top_page/img_hands1.jpg" alt="service integration"></a>
             <h3>Service Integration</h3>
             <p>Integrable services with Monaca such as Repro, AppsFlyer and so on</p>
         </div>
