--- a/content/_index.ja.html
+++ b/content/_index.ja.html
@@ -303,10 +303,10 @@
 </style>
 
 <div id="top-bar">
-    <a href="#" id="sidebar-toggle" data-sidebar-toggle="">
+    <a href="#" id="sidebar-toggle" data-sidebar-toggle="" aria-label="sidebar toggle">
       <i class="fa fa-bars"></i>
     </a>
-    <img src="/images/common/header_logo_docs.png" class="header-logo">
+    <img src="/images/common/header_logo_docs.png" class="header-logo" alt="logo">
     <nav id="top-bar">
         <ul>
             <li><a href="https://teratail.com/tags/monaca">
@@ -321,54 +321,54 @@
         </ul>
     </nav>
     <div class="top-search" id="top-search">
-        <input type="search" id="top-search-doc" placeholder="Search Keyword">
+        <input type="search" aria-label="search" id="top-search-doc" placeholder="Search Keyword">
     </div>
 </div>
 
 <div class="top-body">
     <div class="container">
         <div class="item">
-            <a href="products_guide"><img src="/images/common/top_page/img_samples1.jpg"></a>
+            <a href="products_guide"><img src="/images/common/top_page/img_samples1.jpg" alt="product guide"></a>
             <h3>Monaca を学ぶ</h3>
             <p>プロジェクトの作成からアプリの申請/配布まで解説しています。</p>
         </div>
         <div class="item">
-            <a href="tutorials"><img src="/images/common/top_page/tutorials.jpg"></a>
+            <a href="tutorials"><img src="/images/common/top_page/tutorials.jpg" alt="tutorials"></a>
             <h3>チュートリアル</h3>
             <p>Monaca での開発を効率的にはじめるためのチュートリアルです。</p>
         </div>
         <div class="item">
-            <a href="features"><img src="/images/common/top_page/features.jpg"></a>
+            <a href="features"><img src="/images/common/top_page/features.jpg" alt="features"></a>
             <h3>機能</h3>
             <p>Monaca で開発するアプリに追加できる機能を紹介しています。</p>
         </div>
         <div class="item">
-            <a href="sampleapp/samples"><img src="/images/common/top_page/samples.jpg"></a>
+            <a href="sampleapp/samples"><img src="/images/common/top_page/samples.jpg" alt="sample apps"></a>
             <h3>サンプルアプリ</h3>
             <p>アプリ開発の参考になるゲームやチャットなどのソースコードを提供しています。</p>
         </div>
         <div class="item">
-            <a href="reference"><img src="/images/common/top_page/img_api1.jpg"></a>
+            <a href="reference"><img src="/images/common/top_page/img_api1.jpg" alt="reference"></a>
             <h3>API リファレンス</h3>
             <p>カメラ操作、位置情報などネイティブ機能にアクセスするプラグインの API リファレンスです。</p>
         </div>
         <div class="item">
-            <a href="sampleapp/tips"><img src="/images/common/top_page/tips_tricks.jpg"></a>
+            <a href="sampleapp/tips"><img src="/images/common/top_page/tips_tricks.jpg" alt="tips and tricks"></a>
             <h3>開発のヒント</h3>
             <p>音楽の再生、データベースの利用方法など開発テクニックを紹介しています。</p>
         </div>
         <div class="item">
-            <a href="reference/service_integration"><img src="/images/common/top_page/img_hands1.jpg"></a>
+            <a href="reference/service_integration"><img src="/images/common/top_page/img_hands1.jpg" alt="service intergration"></a>
             <h3>外部サービス連携</h3>
             <p>モバイル広告やユーザー行動分析など、アプリの成長をサポートするサービスとの連携方法について解説しています。</p>
         </div>
         <div class="item">
-            <a href="https://edu.monaca.io/"><img src="/images/common/top_page/img_school1.jpg"></a>
+            <a href="https://edu.monaca.io/"><img src="/images/common/top_page/img_school1.jpg" alt="monaca education"></a>
             <h3>学習・教育</h3>
             <p>モバイルアプリの開発手法を学びたい方や、 学校などの教育機関のための学習サポートプログラムを提供しています。</p>
         </div>
         <div class="item">
-            <a href="https://edu.monaca.io/material"><img src="/images/common/top_page/img_books1.jpg"></a>
+            <a href="https://edu.monaca.io/material"><img src="/images/common/top_page/img_books1.jpg" alt="monaca education"></a>
             <h3>書籍</h3>
             <p>Monaca 公式ガイドをはじめ、プログラミング教育にもご利用いただける書籍やサンプルアプリ、動画教材をご紹介しています。</p>
         </div>
